--- a/about.html
+++ b/about.html
@@ -14,8 +14,23 @@
 	<body>
 		<div id="container">
 			<div id="side">
+				<div id="hometext"><a href="/" >Weple's Blog</a>
+				</div>
 				<a href="/" id="home" title="home" alt="home"><img src="/img/logo.png" alt="Site Name" /></a>
-				<div id="hometext"><a href="/" >Site Name</a></div>
+				<div class="PersonalTitle">About me</div>
+				<div class="sectionPersonal">
+					<ul>
+						<li>Graduate in 2005 of CUMT</li>
+						<li>Focus on MS domain(.net)</li>
+						<li>Learning new technology(Golang..)</li>
+					</ul>
+				</div>
+				<div class="PersonalTitle">Contact me</div>
+				<div class="sectionPersonal">
+					<ul>
+						<li>Email: <a href=mailto:weple@qq.com>weple@qq.com</a></li>
+					</ul>
+				</div>
 				<div class="section">
 					<ul>
 						<li><a href="/about.html">about</a></li>
@@ -30,9 +45,18 @@
 		<span class="postdate">21 April, 2015
 			
 		</span>
-		<p>New Site</p>
-<h2>To Do</h2>
-<p>Edit this Markdown to add an about page</p>
+		<h2>Introduction</h2>
+<p>I am Weipu Zhao(Weple Zhao), graduated from CUMT in 2005, currently working at Capgemini as Team leader and BSA.</p>
+<p>Mainly focus on MS domain .net skills and MS Sql Server skills.</p>
+<p>After play with many languages such as C, C++, Java, Golang, Python, still focus on .net because it has the best IDE to develop your software.</p>
+<p>Not only pursuit better language to use, but also think about to better manage a team: </p>
+<ul>
+<li><strong>CMMI</strong> is traditional, and no matter who on one position, the project still will run as it was. </li>
+<li><strong>Agile</strong> require people with high quality of skills, to push frequently(I believe this is the most important element), but also need manage requirement.</li>
+</ul>
+<h2>Contacts</h2>
+<p>Email:	<a href="&#109;&#x61;&#105;&#108;&#x74;&#x6f;&#58;&#119;&#x65;&#112;&#108;&#101;&#x40;&#x71;&#x71;&#46;&#99;&#x6f;&#x6d;">w&#x65;&#112;&#x6c;&#101;&#64;q&#113;&#46;&#x63;&#x6f;&#109;</a></p>
+<p>Mobile:	<a href="tel:+86-18602150200">+86-18602150200</a></p>
 
 	</div>
 </div>
