--- a/index.html
+++ b/index.html
@@ -7,15 +7,30 @@
 		<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Blog Feed" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<title>SiteName</title>
+		<title>Weple's blog about computer skills and life</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="shortcut icon" href="/img/favicon.ico" />
 	</head>
 	<body>
 		<div id="container">
 			<div id="side">
+				<div id="hometext"><a href="/" >Weple's Blog</a>
+				</div>
 				<a href="/" id="home" title="home" alt="home"><img src="/img/logo.png" alt="Site Name" /></a>
-				<div id="hometext"><a href="/" >Site Name</a></div>
+				<div class="PersonalTitle">About me</div>
+				<div class="sectionPersonal">
+					<ul>
+						<li>Graduate in 2005 of CUMT</li>
+						<li>Focus on MS domain(.net)</li>
+						<li>Learning new technology(Golang..)</li>
+					</ul>
+				</div>
+				<div class="PersonalTitle">Contact me</div>
+				<div class="sectionPersonal">
+					<ul>
+						<li>Email: <a href=mailto:weple@qq.com>weple@qq.com</a></li>
+					</ul>
+				</div>
 				<div class="section">
 					<ul>
 						<li><a href="/about.html">about</a></li>
